--- a/package.json
+++ b/package.json
@@ -6,12 +6,19 @@
     "start": "nodemon ./bin/www"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.3",
+    "connect-mongo": "*",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "ejs": "~2.5.7",
     "ejs-mate": "^3.0.0",
     "express": "~4.16.0",
+    "express-session": "*",
     "http-errors": "~1.6.2",
-    "morgan": "~1.9.0"
+    "mongoose": "*",
+    "morgan": "~1.9.0",
+    "passport": "*",
+    "passport-local": "*"
   }
 }
